--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "Meta2.2",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0"
   }
 }
